# dspsr-kanyixia

./: Dockerfile  Makefile.am  README.md  bootstrap  configure.ac  dspsr_srcdir.h.in  gitlab-ci-builder  greps  local-builder  update
Kernel/: 20220618badminton.md  Makefile.am
Kernel/Applications/: Makefile.am  digihdr.C  load_bits.C  test_Unpack.C
Kernel/Applications/dsp/: TestInput.h
Kernel/Classes/: ASCIIObservation.C  BitSeries.C  BitTable.C  BitUnpacker.C  BlockFile.C  BlockSize.C  ChannelOrder.C  DADABlockFile.C  DADAFile.C  DADAHeader.C  DADAOutputFile.C  DataSeries.C  Digitizer.C  DualFile.C  DummyFile.C  EightBitUnpacker.C  EventEmitter.h  ExcisionUnpacker.C  Expect.C  Expect.h  File.C  FloatUnpacker.C  FourBitUnpacker.C  GenericEightBitUnpacker.C  GenericEightBitUnpackerCUDA.cu  GenericFourBitUnpacker.C  GenericSixteenBitUnpacker.C  GenericVoltageDigitizer.C  GenericVoltageDigitizerCUDA.cu  HistUnpacker.C  IOManager.C  Input.C  InputBuffering.C  InputBufferingShare.C  LaunchConfig.C  Makefile.am  Memory.C  MemoryCUDA.C  MemoryHost.C  MultiFile.C  (+63 more)
Kernel/Classes/dsp/: ASCIIObservation.h  BitSeries.h  BitTable.h  BitUnpacker.h  BlockFile.h  BlockSize.h  BufferingPolicy.h  DADABlockFile.h  DADAFile.h  DADAHeader.h  DADAOutputFile.h  DataSeries.h  Digitizer.h  DualFile.h  EightBitUnpacker.h  ExcisionUnpacker.h  File.h  FourBitUnpacker.h  GenericFourBitUnpacker.h  GenericSixteenBitUnpacker.h  GenericVoltageDigitizer.h  GenericVoltageDigitizerCUDA.h  HistUnpacker.h  IOManager.h  Input.h  InputBuffering.h  InputBufferingShare.h  InputSource.h  LaunchConfig.h  Memory.h  MemoryCUDA.h  MemoryHost.h  MultiFile.h  Multiplex.h  Observation.h  Operation.h  OperationPerformanceMetrics.h  OperationThread.h  OutputFile.h  OutputFileShare.h  (+2 more)
Kernel/Classes/tests/: DADAHeaderTest.cpp  DADAOutputFileTest.cpp  GaussianNoiseSourceTest.cpp  GenericVoltageDigitizerTest.cpp  ImpulsiveNoiseSourceTest.cpp  Makefile.am  SumSourceTest.cpp  WeightedTimeSeriesTest.cpp
Kernel/Classes/testutils/: GaussianNoiseSource.cpp  GtestMain.cpp  ImpulsiveNoiseSource.cpp  KnownDataSource.cpp  Makefile.am  SumSource.cpp  TestSource.cpp  TransferCUDATestHelper.cpp
Kernel/Formats/: File_registry.C  Makefile.am  ParallelInput_registry.C  ParallelUnpacker_registry.C  SourceOpen.C  Unpacker_registry.C
Kernel/Formats/asp/: ASPFile.C
Kernel/Formats/boreas/: BoreasVoltageUnpacker.C  BoreasVoltageUnpackerCUDA.cu  Makefile.am
Kernel/Formats/bpsr/: BPSRCrossUnpacker.C
Kernel/Formats/caspsr/: CASPSRSingleUnpacker.C  CASPSRUnpacker.C  Makefile.am
Kernel/Formats/cpsr/: pspmDbase.C  pspmDbase.h  pspm_search_header.h
Kernel/Formats/cpsr2/: CPSR2File.C  CPSR2TwoBitCorrection.C  yamasaki_verify.C
Kernel/Formats/dada/: DADABuffer.C  Makefile.am  OutputDADABuffer.C
Kernel/Formats/dsp/: SourceOpen.h
Kernel/Formats/emerlin/: EmerlinUnpacker.C
Kernel/Formats/fits/: FITSDigitizer.C  FITSDigitizerCUDA.cu  FITSFile.C  FITSOutputFile.C  FITSUnpacker.C  Makefile.am
Kernel/Formats/gmrt/: GMRTFile.C  GMRTFilterbank16.C
Kernel/Formats/guppi/: GUPPIFile.C
Kernel/Formats/kat/: KAT7Unpacker.C  Makefile.am  MeerKATUnpacker.C
Kernel/Formats/lofar_dal/: LOFAR_DALFile.C
Kernel/Formats/lump/: MPIfR_Real16_t.h
Kernel/Formats/mark4/: Mark4File.C
Kernel/Formats/mark5/: Mark5File.C  Mark5TwoBitCorrection.C  vlba_stream.c  vlba_stream.h  vlba_stream_file.c
Kernel/Formats/mark5b/: readme.md
Kernel/Formats/mopsr/: MOPSRUnpacker.C  Makefile.am
Kernel/Formats/pmdaq/: PMDAQFile.C  PMDAQ_Observation.C
Kernel/Formats/sigproc/: SigProcDigitizer.C  SigProcUnpacker.C  read_header.c
Kernel/Formats/ska1/: AAVS2Unpacker.C  CBFPSRUnpacker.C  LFAASPEADUnpacker.C  LFAASPEADUnpackerCUDA.cu  Makefile.am  SKA1Unpacker.C  SKAParallelUnpacker.C  SKAParallelUnpackerCUDA.cu
Kernel/Formats/uwb/: Makefile.am  UWBEightBitUnpacker.C  UWBFloatUnpacker.C  UWBFloatUnpackerCUDA.cu  UWBFourBitUnpacker.C  UWBTwoBitUnpacker.C  UWBUnpacker.C
Kernel/Formats/vdif/: VDIFFile.C  (+2 more)
More/Applications/: Makefile.am
Signal/: Makefile.am
Signal/General/: ACFilterbank.C  Apodization.C  AutoCorrelation.C  Bandpass.C  BitStatsPlotter.C  ChanPolSelect.C  ChanPolSelectCUDA.cu  Chomper.C  Convolution.C  ConvolutionCUDA.cu  ConvolutionCUDASpectral.cu  Dedispersion.C  DedispersionPipe.C  DedispersionPipeConfig.C  DedispersionSampleDelay.C  DelayStartTime.C  DelayStartTimeCUDA.cu  Derotation.C  DetectionCUDA.cu  Dump.C  DynamicFilter.C  ExamplePipeline.C  ExcisionStatsPlotter.C  FScrunch.C  FZoomCUDA.cu  Filterbank.C  FilterbankEngineCPU.C  FilterbankEngineCUDA.cu  GeometricDelay.C  InverseFilterbank.C  InverseFilterbankEngineCPU.C  InverseFilterbankEngineCUDA.cu  InverseFilterbankResponse.C  LevelMonitor.C  LoadToFITS.C  LoadToFil.C  LoadToQuantize.C  LoadToSlice.C  LoadToSliceN.C  Makefile.am  (+52 more)
Signal/Generators/: Generator.C  ImpulseTrain.C  Makefile.am  Superposition.C
Signal/Pulsar/: Archiver.C  ArchiverExtensions.C  CyclicFold.C  CyclicFoldEngineCUDA.cu  Fold.C  FoldCUDA.cu  LoadToFold1.C  LoadToFoldConfig.C  LoadToFoldN.C  Makefile.am  PhaseLockedFilterbank.C  PhaseSeries.C  PhaseSeriesUnloader.C  TimeDivide.C  TransferPhaseSeriesCUDA.C  UnloaderShare.C  dspsr.C  t2pred.C
Signal/Statistics/: CumulativeDistribution.C  Makefile.am  PearsonIV.C  PearsonVI.C  SKLimits.C  sk_distrib_plot.C  sk_limit_plot.C
config/: Makefile.am  Makefile.cuda  Makefile.gtest  ax_cxx_compile_stdcxx_11.m4  backends.default  cuda.m4  mark5access.m4
python/: Makefile.am  dspsr.i
resources/: Makefile.am
test/: Makefile.am  catch.hpp  test_FTransform_cufft_precision.cpp
test/InverseFilterbank/: bench_InverseFilterbank.cpp  test_InverseFilterbankEngineCPU.cpp  test_InverseFilterbankEngineCUDA.cpp  test_InverseFilterbankEngine_integration.cpp  test_InverseFilterbankPipeline.cpp  test_InverseFilterbankResponse.cpp
test/Pipeline/: README.md  compare_files.sh  config.yaml  dspsr_pipeline_test.sh  k8s.yml  pyproject.toml  pytest.ini
test/SpectralKurtosis/: test_SpectralKurtosis_integration.cpp
test/util/: TestReporter.hpp  util.cpp  util.hpp
(+115 files in other folders)
