
SUBDIRS = Statistics Generators General Pulsar

lib_LTLIBRARIES = libdspstats.la libdspdsp.la libdspsr.la

libdspstats_la_SOURCES =
libdspstats_la_LIBADD = Statistics/libStatistics.la

libdspdsp_la_SOURCES =
libdspdsp_la_LIBADD = General/libGeneral.la

libdspsr_la_SOURCES =
libdspsr_la_LIBADD = Pulsar/libPulsar.la

include $(top_srcdir)/config/Makefile.local

